Fix footer overflow

--- a/juliaapp/static/main.css
+++ b/juliaapp/static/main.css
@@ -17,6 +17,7 @@ body {
   background-color: #28282f;
   font-family: 'JetBrains Mono', monospace;
   color: #fffffc; 
+  margin-bottom: 60px;
   }
 
 h1{
